app/kubernetes/manifests/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-liferay
  namespace: app-liferay
  labels:
    app: app
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
