app/kubernetes/manifests/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi-flask-ingress
  namespace: app-liferay
spec:
  ingressClassName: nginx
  rules:
  - host: appliferay.localhost.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-liferay
            port:
              number: 3000
